fix collapsed ParityBar on Safari

--- a/js/src/views/ParityBar/parityBar.css
+++ b/js/src/views/ParityBar/parityBar.css
@@ -43,7 +43,7 @@
 
 .expanded {
   right: 16px;
-  max-height: 300px;
+  height: 300px;
   border-radius: 4px 4px 0 0;
   overflow-y: auto;
   display: flex;
